# aoc24

./: README.md  bootstrap.py  pyproject.toml
aoc24/: main.py
aoc24/src/puzzles/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py
